--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "auto-image-cropper"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Ritiek <ritiekmalhotra123@gmail.com>"]
 description = "Removes extra white borders to correctly resize canvas"
 repository = "https://github.com/Ritiek/auto-image-cropper"
@@ -10,7 +10,8 @@ categories = ["multimedia::images", "command-line-utilities"]
 license = "MIT"
 
 [dependencies]
-image = "0.13.0"
+image = "0.13"
+clap = "2.24"
 
 [[bin]]
 name = "autocrop"
