--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
 name = "auto-image-cropper"
 version = "0.1.5"
-authors = ["Ritiek <ritiekmalhotra123@gmail.com>"]
+authors = ["Ritiek Malhotra <ritiekmalhotra123@gmail.com>"]
+edition = "2018"
 description = "Removes extra white borders to correctly resize canvas"
-repository = "https://github.com/Ritiek/auto-image-cropper"
+repository = "https://github.com/ritiek/auto-image-cropper"
 readme = "README.md"
 keywords = ["image", "crop", "auto", "canvas", "resize"]
 categories = ["multimedia::images", "command-line-utilities"]
 license = "MIT"
 
 [dependencies]
-image = "0.13"
-clap = "2.24"
-rayon = "0.7"
+image = "0.23.0"
+clap = "2.33.0"
+rayon = "1.3.0"
 
 [[bin]]
 name = "autocrop"
+path = "src/main.rs"
