Generate dynamic library file for Python bindings
Using PyO3 it is possible to compile the library in a dynamic library
format (such as *.so on Linux). This generated dynamic library can
then be imported via other via other programming languages such as
Python and C.

On running:
```shell
$ cargo build
```
A dynamic library file will be generated in `target/debug/`
with the name, such as on Linux: `libauto_image_cropper.so`.

By changing the current directory to `target/debug/`, this
can now be imported and corresponding functions may be called, in
say Python with:
```python
>>> import libauto_image_cropper
>>> libauto_image_cropper.calculate_corners("/path/to/imagefile.png")
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,22 @@ keywords = ["image", "crop", "auto", "canvas", "resize"]
 categories = ["multimedia::images", "command-line-utilities"]
 license = "MIT"
 
+[lib]
+name = "auto_image_cropper"
+
+# "cdylib" is useful to generate a dynamic library
+# (*.so on Linux, *.dylib on OSX, *.dll on Windows)
+# This dynamic library can then be linked from other
+# programming languages, such as C and Python.
+
+# "rlib" is necessary to link from Rust binaries
+crate-type = ["rlib", "cdylib"]
+
 [dependencies]
 image = "0.23.0"
 clap = "2.33.0"
 rayon = "1.3.0"
+pyo3 = { version = "0.9.0-alpha.1", features = ["extension-module"] }
 
 [[bin]]
 name = "autocrop"
