--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,11 @@ crate-type = ["rlib", "cdylib"]
 image = "0.23.0"
 clap = "2.33.0"
 rayon = "1.3.0"
-pyo3 = { version = "0.9.0-alpha.1", features = ["extension-module"] }
+
+pyo3 = { version = "0.9.0-alpha.1", features = ["extension-module"], optional = true}
+
+[features]
+python-binding = ["pyo3"]
 
 [[bin]]
 name = "autocrop"
